Add custom cursor and some styling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <!-- Custom cursor -->
+    <!-- <div class="cursor"></div> -->
+
     <div class="container">
         <div class="box-wrapper">
             <!-- Upper Section -->
-             <div class="box-grid">
+             <div class="box-grid upper-box-grid">
                     <div class="box">
                         
                     </div>
@@ -28,7 +31,7 @@
 
               </div>
              <!-- Bottom Section -->
-             <div class="box-grid">
+             <div class="box-grid lower-box-grid">
                  <div class="box sm-box">
                      
                 </div>
