--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohama Salfi</title>
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -26,8 +30,10 @@
              </div>
              <!-- Middle Section -->
               <div class="mid-content">
-                  <h1>Heading</h1>
-                  <p>Paragraph</p>
+                  <h1>Rohama Salfi</h1>
+                  <p>deliver
+
+                    full stack solutions.</p>
 
               </div>
              <!-- Bottom Section -->
