--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
              <!-- Middle Section -->
               <div class="mid-content">
                   <h1>Rohama Salfi</h1>
-                  <p>deliver
+                  <p>deliver <span>full stack solutions.</span>
 
-                    full stack solutions.</p>
+                    </p>
 
               </div>
              <!-- Bottom Section -->
