Styling work box

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <!-- Remix Icons  -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
     <!-- Custom cursor -->
@@ -42,6 +47,10 @@
                      
                 </div>
                 <div class="box sm-box">
+                    <div class="work-box">
+                        <a>Show <br> my <br> work</a>
+                        <i class="ri-arrow-right-up-line"></i>
+                    </div>
                     
                 </div>
                 <div class="box bx">
