--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 
 <body>
     <!-- Custom cursor -->
-    <div class="cursor"></div>
+    <!-- <div class="cursor" id="custom-cursor"></div> -->
+
 
     <div class="container">
         <div class="box-wrapper">
             <!-- Upper Section -->
+
             <div class="box-grid upper-box-grid">
-                <div class="box about-card">
+                <div class="box box1 about-card">
                     <div class="about-header">
                         <img class="avatar" src="./media/Profile.jpg" alt="avatar">
                         <div class="about-info">
@@ -38,15 +40,12 @@
                     </p>
 
                 </div>
-                <div class="box sm-box bx custom-card">
-                    <div class="icon-bg"> <i class="ri-lightbulb-flash-fill"></i></div>
+                <div class="box box2 sm-box bx custom-card">
+                    <div class="img-bg"><img src="./media/blub.png" class="custom-card-img1" alt=""></div>
+                    <p class="custom-card-subtitle">Currently learning: React.js, Next.js, TypeScript, Framer Motion
+                        with UI/UX design.</p>
 
-                    <p class="custom-card-title">Senior Full Stack Engineer</p>
-                    <p class="custom-card-subtitle">
-                        at <a href="https://redvike.com/case-studies/" target="_blank" rel="noreferrer"
-                            aria-label="Redvike (opens in a new tab)" class="custom-card-link">Redvike</a>
-                    </p>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="custom-card-svg">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="custom-card-svg1">
                         <path fill-rule="evenodd"
                             d="M12 1.5a.75.75 0 0 1 .75.75V4.5a.75.75 0 0 1-1.5 0V2.25A.75.75 0 0 1 12 1.5ZM5.636 4.136a.75.75 0 0 1 1.06 0l1.592 1.591a.75.75 0 0 1-1.061 1.06l-1.591-1.59a.75.75 0 0 1 0-1.061Zm12.728 0a.75.75 0 0 1 0 1.06l-1.591 1.592a.75.75 0 0 1-1.06-1.061l1.59-1.591a.75.75 0 0 1 1.061 0Zm-6.816 4.496a.75.75 0 0 1 .82.311l5.228 7.917a.75.75 0 0 1-.777 1.148l-2.097-.43 1.045 3.9a.75.75 0 0 1-1.45.388l-1.044-3.899-1.601 1.42a.75.75 0 0 1-1.247-.606l.569-9.47a.75.75 0 0 1 .554-.68ZM3 10.5a.75.75 0 0 1 .75-.75H6a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 10.5Zm14.25 0a.75.75 0 0 1 .75-.75h2.25a.75.75 0 0 1 0 1.5H18a.75.75 0 0 1-.75-.75Zm-8.962 3.712a.75.75 0 0 1 0 1.061l-1.591 1.591a.75.75 0 1 1-1.061-1.06l1.591-1.592a.75.75 0 0 1 1.06 0Z"
                             clip-rule="evenodd"></path>
@@ -54,11 +53,25 @@
 
 
                 </div>
-                <div class="box sm-box">
-
+                <div class="box box3 sm-box custom-card-box">
+                    <div class="custom-card-group">
+                        <img class="custom-card-img" src="./media/gmail.webp" alt="gmail">
+                        <p class="custom-card-text">Let's keep in <br> touch!</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="custom-card-svg2">
+                            <path fill-rule="evenodd"
+                                d="M17.834 6.166a8.25 8.25 0 1 0 0 11.668.75.75 0 0 1 1.06 1.06c-3.807 3.808-9.98 3.808-13.788 0-3.808-3.807-3.808-9.98 0-13.788 3.807-3.808 9.98-3.808 13.788 0A9.722 9.722 0 0 1 21.75 12c0 .975-.296 1.887-.809 2.571-.514.685-1.28 1.179-2.191 1.179-.904 0-1.666-.487-2.18-1.164a5.25 5.25 0 1 1-.82-6.26V8.25a.75.75 0 0 1 1.5 0V12c0 .682.208 1.27.509 1.671.3.401.659.579.991.579.332 0 .69-.178.991-.579.3-.4.509-.99.509-1.671a8.222 8.222 0 0 0-2.416-5.834ZM15.75 12a3.75 3.75 0 1 0-7.5 0 3.75 3.75 0 0 0 7.5 0Z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                        <a href="mailto:rohxama@gmail.com" class="custom-mail-button">
+                            Mail me
+                            <span class="pulse-dot"></span>
+                        </a>
+                    </div>
                 </div>
             </div>
+
             <!-- Middle Section -->
+
             <div class="mid-content">
                 <h1 class="admin">Rohama Salfi</h1>
                 <p class="text-wrapper">
@@ -71,24 +84,91 @@
 
 
             </div>
+
             <!-- Bottom Section -->
+
             <div class="box-grid lower-box-grid">
-                <div class="box sm-box">
+                <div class="box  box2 sm-box ">
                     <div class="social-box">
-                        <a href="#" class="social-icon"><i class="ri-linkedin-fill linkedin"></i></a>
-                        <a href="#" class="social-icon"><i class="ri-github-fill github"></i></a>
+                        <a href="#" class="social-icon">
+                            <i class="ri-linkedin-fill linkedin"></i>
+                        </a>
+                        <a href="https://github.com/rohxama" class="social-icon"><i
+                                class="ri-github-fill github"></i></a>
                         <a href="#" class="social-icon"><i class="ri-whatsapp-line whatsapp"></i></a>
                         <a href="#" class="social-icon"><i class="ri-instagram-line instagram"></i></a>
                     </div>
-
                 </div>
-                <div class="box sm-box">
-                    <div class="work-box">
+
+                <input type="checkbox" id="experience-drawer-toggle">
+
+                <div class="box box3 sm-box">
+                    <label for="experience-drawer-toggle" class="work-box">
                         <a>Show <br> my <br> work</a>
                         <i class="ri-arrow-right-up-line"></i>
+                    </label>
+                </div>
+
+                <!-- Drawer -->
+                <div class="drawer">
+                    <div class="drawer-header">
+                        <label for="experience-drawer-toggle" class="close-btn"><i
+                                class="ri-arrow-left-line"></i></label>
+                        <a href="https://github.com/rohxama" target="_blank">View Full Resume</a>
+                    </div>
+
+                    <div class="drawer-content">
+
+                        <!-- Internship Block -->
+                        <div class="exp-block">
+                            <div class="exp-date">SEP 2024 — JAN 2025</div>
+                            <div class="exp-body">
+                                <h3>Intern · Penrose Dynamics</h3>
+                                <p>Agile development environment with emphasis on collaboration, software testing, and
+                                    version control using Git.</p>
+                                <div class="tags">
+                                    <span>Agile</span>
+                                    <span>Git</span>
+                                    <span>Team Work</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="exp-block">
+                            <div class="exp-date">MAY 2024 — SEP 2024</div>
+                            <div class="exp-body">
+                                <h3>Intern · TechnoHacks EduTech</h3>
+                                <p>Led junior developers and implemented new features. Learned frontend/backend
+                                    integration and participated in team knowledge sharing.</p>
+                                <div class="tags">
+                                    <span>HTML</span>
+                                    <span>CSS</span>
+                                    <span>JavaScript</span>
+                                    <span>PHP</span>
+                                    <span>SQL</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="exp-block">
+                            <div class="exp-date">APRIL 2024 — MAY 2024</div>
+                            <div class="exp-body">
+                                <h3>Intern · Services Ground</h3>
+                                <p>Built responsive interfaces using HTML, CSS, JS. Showcased work via LinkedIn posts
+                                    and practiced real-world projects.</p>
+                                <div class="tags">
+                                    <span>Responsive UI</span>
+                                    <span>LinkedIn</span>
+                                    <span>JS Basics</span>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-                <div class="box bx">
+
+
+                <div class="box box1 bx">
                     <div class="map-card">
                         <a href="https://www.google.com/maps/@30.6681139,73.0868356,12z?entry=ttu&g_ep=EgoyMDI1MDYwOC4wIKXMDSoASAFQAw%3D%3D6"
                             target="_blank" rel="noreferrer">
@@ -103,8 +183,6 @@
                 </div>
             </div>
         </div>
-
-
 
     </div>
 
