--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             <div class="box-grid lower-box-grid">
                 <div class="box  box2 sm-box ">
                     <div class="social-box">
-                        <a href="#" class="social-icon">
+                        <a href="https://www.linkedin.com/in/rohxmx/" class="social-icon">
                             <i class="ri-linkedin-fill linkedin"></i>
                         </a>
                         <a href="https://github.com/rohxama" class="social-icon"><i
                                 class="ri-github-fill github"></i></a>
-                        <a href="#" class="social-icon"><i class="ri-whatsapp-line whatsapp"></i></a>
-                        <a href="#" class="social-icon"><i class="ri-instagram-line instagram"></i></a>
+                        <a href="https://wa.me/923134928058" class="social-icon"><i class="ri-whatsapp-line whatsapp"></i></a>
+                        <a href="https://www.instagram.com/rohxmx/" class="social-icon"><i class="ri-instagram-line instagram"></i></a>
                     </div>
                 </div>
 
