--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <!-- Bottom Section -->
 
             <div class="box-grid lower-box-grid">
-                <div class="box  box2 sm-box ">
+                <div class="box box2 sm-box">
                     <div class="social-box">
                         <a href="https://www.linkedin.com/in/rohxmx/" class="social-icon">
                             <i class="ri-linkedin-fill linkedin"></i>
@@ -114,7 +114,7 @@
                     <div class="drawer-header">
                         <label for="experience-drawer-toggle" class="close-btn"><i
                                 class="ri-arrow-left-line"></i></label>
-                        <a href="https://github.com/rohxama" target="_blank">View Full Resume</a>
+                        <a href="./media/Reume.pdf" target="_blank">View Full Resume</a>
                     </div>
 
                     <div class="drawer-content">
