--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Custom cursor -->
-    <!-- <div class="cursor" id="custom-cursor"></div> -->
+    <div class="cursor" id="custom-cursor"></div>
 
 
     <div class="container">
