--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </a>
                         <a href="https://github.com/rohxama" class="social-icon"><i
                                 class="ri-github-fill github"></i></a>
-                        <a href="https://wa.me/923134928058" class="social-icon"><i class="ri-whatsapp-line whatsapp"></i></a>
+                        <a href="#" class="social-icon"><i class="ri-whatsapp-line whatsapp"></i></a>
                         <a href="https://www.instagram.com/rohxmx/" class="social-icon"><i class="ri-instagram-line instagram"></i></a>
                     </div>
                 </div>
@@ -171,16 +171,14 @@
 
                 <div class="box box1 bx">
                     <div class="map-card">
-                        <a href="https://www.google.com/maps/@30.6681139,73.0868356,12z?entry=ttu&g_ep=EgoyMDI1MDYwOC4wIKXMDSoASAFQAw%3D%3D6"
+                        <a href="https://www.google.com/maps/@31.5361606,74.3289543,10.36z?entry=ttu&g_ep=EgoyMDI1MDYxMC4xIKXMDSoASAFQAw%3D%3D"
                             target="_blank" rel="noreferrer">
                             <div class="map-bg"></div>
                             <div class="map-marker pulse"></div>
                             <div class="map-marker-border"></div>
-                            <span class="map-label">SAHIWAL, PAKISTAN</span>
+                            <span class="map-label">Lahore, PAKISTAN</span>
                         </a>
                     </div>
-
-
                 </div>
             </div>
         </div>
